initials print but incorrectly

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <input class="btn btn-primary" id="go-back" type="submit" value="Go Back">
         </div>
         <div id="highscore-list" class="hide">
-            highscore list
+            <div id="print-initials"></div>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
